--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -9,47 +9,27 @@ body {
 
 .logo {
   font: bolder 4em 'Source Code Pro', sans-serif;
-  letter-spacing: -0.12em;
-  color: #ddd;
-  -webkit-animation: shadow 2s linear infinite;
-     -moz-animation: shadow 2s linear infinite;
-      -ms-animation: shadow 2s linear infinite;
-       -o-animation: shadow 2s linear infinite;
-          animation: shadow 2s linear infinite;
-  text-shadow: 1px 1px 3px grey, 2px 2px 4px lightgrey, 3px 3px 5px #aaa, 4px 4px 6px #aaa, 5px 5px 6px #bbb, 6px 6px 7px #ccc, 7px 7px 8px #ddd, 8px 8px 9px #eee;
+  letter-spacing: -0.07em;
+  color: hotpink;
+  -webkit-animation: shadow 1.5s ease-in-out infinite;
+     -moz-animation: shadow 1.5s ease-in-out infinite;
+          animation: shadow 1.5s ease-in-out infinite;
 }
 
 @-webkit-keyframes shadow {
   to {
-    text-shadow: 8px 8px 9px #eee, 7px 7px 8px #ddd, 6px 6px 7px #ccc, 5px 5px 6px #bbb, 4px 4px 6px #aaa, 3px 3px 5px #aaa, 2px 2px 4px lightgrey, 1px 1px 3px grey;
-    color: grey;
+    text-shadow: 0.03em 0.03em white, 0.06em 0.06em rgba(255, 105, 180, 0.5);
   }
 }
 
 @-moz-keyframes shadow {
   to {
-    text-shadow: 8px 8px 9px #eee, 7px 7px 8px #ddd, 6px 6px 7px #ccc, 5px 5px 6px #bbb, 4px 4px 6px #aaa, 3px 3px 5px #aaa, 2px 2px 4px lightgrey, 1px 1px 3px grey;
-    color: grey;
-  }
-}
-
-@-ms-keyframes shadow {
-  to {
-    text-shadow: 8px 8px 9px #eee, 7px 7px 8px #ddd, 6px 6px 7px #ccc, 5px 5px 6px #bbb, 4px 4px 6px #aaa, 3px 3px 5px #aaa, 2px 2px 4px lightgrey, 1px 1px 3px grey;
-    color: grey;
-  }
-}
-
-@-o-keyframes shadow {
-  to {
-    text-shadow: 8px 8px 9px #eee, 7px 7px 8px #ddd, 6px 6px 7px #ccc, 5px 5px 6px #bbb, 4px 4px 6px #aaa, 3px 3px 5px #aaa, 2px 2px 4px lightgrey, 1px 1px 3px grey;
-    color: grey;
+    text-shadow: 0.03em 0.03em white, 0.06em 0.06em rgba(255, 105, 180, 0.5);
   }
 }
 
 @keyframes shadow {
   to {
-    text-shadow: 8px 8px 9px #eee, 7px 7px 8px #ddd, 6px 6px 7px #ccc, 5px 5px 6px #bbb, 4px 4px 6px #aaa, 3px 3px 5px #aaa, 2px 2px 4px lightgrey, 1px 1px 3px grey;
-    color: grey;
+    text-shadow: 0.03em 0.03em white, 0.06em 0.06em rgba(255, 105, 180, 0.5);
   }
 }
