--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,7 +2,7 @@ body {
   background: #eee;
   width: 100%;
   max-width: 60em;
-  margin: 0 auto !important;
+  margin: 0 auto !important; /* !important because using normalize.css */
 }
 
 .logo {
